--- a/client/src/pages/JobAlert.css
+++ b/client/src/pages/JobAlert.css
@@ -190,7 +190,7 @@
         }
 
         /* Main Content */
-        .main-content {
+        .app .main-content {
             flex: 1;
             padding: 40px 30px;
             max-width: calc(100vw - 350px);
@@ -737,7 +737,7 @@
                 width: 300px;
             }
             
-            .main-content {
+            .app .main-content {
                 max-width: calc(100vw - 300px);
             }
         }
@@ -756,7 +756,7 @@
                 transform: translateX(350px);
             }
             
-            .main-content {
+            .app .main-content {
                 max-width: 100vw;
                 padding: 20px;
             }
