--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -379,7 +379,7 @@ nav ul li a:hover::after {
   opacity: 0.5;
 }
 
-.section-title {
+section.features .section-title {
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 50px;
@@ -388,12 +388,12 @@ nav ul li a:hover::after {
   z-index: 2;
 }
 
-.section-title span {
+section.features .section-title span {
   color: var(--accent);
   position: relative;
 }
 
-.section-title span::after {
+section.features .section-title span::after {
   content: '';
   position: absolute;
   bottom: -10px;
@@ -946,7 +946,7 @@ footer::before {
     order: 2;
   }
 
-  .section-title {
+  section.features .section-title {
     font-size: 2.2rem;
     margin-bottom: 40px;
   }
@@ -1148,7 +1148,7 @@ footer::before {
     font-size: 1rem;
   }
   
-  .section-title {
+  section.features .section-title {
     font-size: 1.8rem;
   }
   
